# labs_algorithms_2024

./: .gitignore  CMakeLists.txt
lab1/: main.c
src/: CMakeLists.txt  lab1.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c  lab7.c  main.c
src/collections/: AbstractList.c  AbstractList.h  CircularLinkedList.c  CircularLinkedList.h  Collection.c  Collection.h  HashTable.c  HashTable.h  List.c  List.h  Queue.c  Queue.h  Stack.c  Stack.h
src/lab3structs/: cpuSim.c  cpuSim.h
src/utils/: Random.c  Random.h  Scanner.c  Scanner.h  Types.h
